      strDatabase (needed for above fix).
    * libraries/config_import.lib.php: Do not override
      $cfg['ShowHttpHostTitle'].
    * config.inc.php, css/phpmyadmin.css.php, libraries/config_import.lib.php:
      Can disable main page icons (bug #965550).
    * header.inc.php, css/phpmyadmin.css.php: Use span insted of div, div is
      not allowed here.

2004-06-02 Alexander M. Turek  <happybirthdaytome@derrabus.de>
    * db_details_db_info.php, tbl_properties_tbl_info.php: Table type is called
      "Engine" in MySQL 4.1.2 (bug #964011).

2004-05-31 Marc Delisle  <lem9@users.sourceforge.net>
    * header.inc.php: bug #963414, when PropertiesIconic was false,
      the code did not define the icon variables. Also, remove hardcoded
      'Server' string
    * pdf_schema.php: bug #915735, dictionary cropped in landscape letter

2004-05-30 Michal Čihař  <michal@cihar.com>
    * libraries/display_tbl.lib.php: Return back to browsing after editing
      row.

2004-05-29 Marc Delisle  <lem9@users.sourceforge.net>
    * sql.php: bug #956828, deleting last row gives an error. I could not
      find a case where we need the line I just removed, which was
      causing the bug.
    * tbl_properties.inc.php: missing statement group {}, was causing
      the display of part of the changing amount of columns dialog
      when editing a field structure

2004-05-28 Michal Čihař  <michal@cihar.com>
    * libraries/display_tbl.lib.php: Decrease limit for query truncating (see
      comments in bug #951744).
    * Documentation.html, config.inc.php, tbl_query_box.php: Default query can
      contain field names (RFE #948590, patch #961726).

2004-05-26 Michal Čihař  <michal@cihar.com>
    * lang/norwegian: Update, thanks to Sven-Erik Andersen - sven-erik.
    * lang/estonian: Update thanks to Alvar Soome - finsoft.
    * lang/indonesian: Update thanks to Rachim Tamsjadi - tamsy.
    * lang/dutch: Update thanks to Ivo Teel - calimonk.