@@ -24,6 +24,7 @@ $Source$
       Can disable main page icons (bug #965550).
     * header.inc.php, css/phpmyadmin.css.php: Use span insted of div, div is
       not allowed here.
+    * tbl_query_box.php: Fix default query generating.
 
 2004-06-02 Alexander M. Turek  <happybirthdaytome@derrabus.de>
     * db_details_db_info.php, tbl_properties_tbl_info.php: Table type is called
